Updated transcripts so that their dateTime AND session type form a unique ID, rather than just the former alone.