@@ -13,8 +13,6 @@ import org.elasticsearch.index.query.QueryBuilder;
 import org.elasticsearch.search.SearchHit;
 import org.elasticsearch.search.fetch.subphase.highlight.HighlightBuilder;
 import org.elasticsearch.search.sort.SortBuilder;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Repository;
 
 import java.io.IOException;
@@ -22,16 +20,14 @@ import java.util.Collection;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
+import java.util.regex.Pattern;
 
 @Repository
-public class ElasticTranscriptSearchDao extends ElasticBaseDao implements TranscriptSearchDao
-{
-    private static final Logger logger = LoggerFactory.getLogger(ElasticTranscriptSearchDao.class);
-
-    protected static final String transcriptIndexName = SearchIndex.TRANSCRIPT.getIndexName();
-
-    protected static final List<HighlightBuilder.Field> highlightedFields =
+public class ElasticTranscriptSearchDao extends ElasticBaseDao implements TranscriptSearchDao {
+    private static final String transcriptIndexName = SearchIndex.TRANSCRIPT.getIndexName();
+    private static final List<HighlightBuilder.Field> highlightedFields =
             Collections.singletonList(new HighlightBuilder.Field("text").numOfFragments(3));
+    private static final String idSeparator = "|**|";
 
     /** {@inheritDoc} */
     @Override
@@ -45,7 +41,7 @@ public class ElasticTranscriptSearchDao extends ElasticBaseDao implements Transc
     /** {@inheritDoc} */
     @Override
     public void updateTranscriptIndex(Transcript transcript) {
-        updateTranscriptIndex(Collections.singletonList(transcript));
+        updateTranscriptIndex(List.of(transcript));
     }
 
     /** {@inheritDoc} */
@@ -54,7 +50,8 @@ public class ElasticTranscriptSearchDao extends ElasticBaseDao implements Transc
         BulkRequest bulkRequest = new BulkRequest();
         transcripts.stream()
                 .map(TranscriptView::new)
-                .map(t -> getJsonIndexRequest(transcriptIndexName, t.getDateTime(), t))
+                .map(t -> getJsonIndexRequest(transcriptIndexName,
+                        t.getDateTime() + idSeparator + t.getSessionType(), t))
                 .forEach(bulkRequest::add);
         safeBulkRequestExecute(bulkRequest);
     }
@@ -83,6 +80,7 @@ public class ElasticTranscriptSearchDao extends ElasticBaseDao implements Transc
     }
 
     private TranscriptId getTranscriptIdFromHit(SearchHit hit) {
-        return new TranscriptId(hit.getId());
+        String[] data = hit.getId().split(Pattern.quote(idSeparator));
+        return new TranscriptId(data[0], data[1]);
     }
 }
